apps/base/mealie/network.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mealie.example.com
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - mealie.example.com
    secretName: mealie-tls
  rules:
  - host: mealie.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 80
